--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3535,6 +3535,21 @@
 - table:
     schema: public
     name: moped_project
+  array_relationships:
+  - name: moped_proj_features
+    using:
+      foreign_key_constraint_on:
+        column: project_id
+        table:
+          schema: public
+          name: moped_proj_features
+  - name: moped_proj_personnel
+    using:
+      foreign_key_constraint_on:
+        column: project_id
+        table:
+          schema: public
+          name: moped_proj_personnel
   insert_permissions:
   - role: moped-admin
     permission:
