--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -620,74 +620,85 @@
     permission:
       check: {}
       columns:
-      - milestone_name
-      - milestone_description
-      - milestone_order
       - required_milestone
+      - milestone_average_length
       - milestone_id
+      - milestone_rank
+      - related_phase_id
+      - milestone_description
+      - milestone_name
       backend_only: false
   - role: moped-editor
     permission:
       check: {}
       columns:
-      - milestone_name
-      - milestone_description
-      - milestone_order
       - required_milestone
+      - milestone_average_length
       - milestone_id
+      - milestone_rank
+      - related_phase_id
+      - milestone_description
+      - milestone_name
       backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
       columns:
       - required_milestone
+      - milestone_average_length
       - milestone_id
-      - milestone_order
+      - milestone_rank
+      - related_phase_id
       - milestone_description
       - milestone_name
       filter: {}
-      allow_aggregations: true
   - role: moped-editor
     permission:
       columns:
       - required_milestone
+      - milestone_average_length
       - milestone_id
-      - milestone_order
+      - milestone_rank
+      - related_phase_id
       - milestone_description
       - milestone_name
       filter: {}
-      allow_aggregations: true
   - role: moped-viewer
     permission:
       columns:
-      - milestone_name
-      - milestone_description
-      - milestone_order
       - required_milestone
+      - milestone_average_length
       - milestone_id
+      - milestone_rank
+      - related_phase_id
+      - milestone_description
+      - milestone_name
       filter: {}
-      allow_aggregations: true
   update_permissions:
   - role: moped-admin
     permission:
       columns:
       - required_milestone
+      - milestone_average_length
       - milestone_id
-      - milestone_order
+      - milestone_rank
+      - related_phase_id
       - milestone_description
       - milestone_name
       filter: {}
-      check: null
+      check: {}
   - role: moped-editor
     permission:
       columns:
       - required_milestone
+      - milestone_average_length
       - milestone_id
-      - milestone_order
+      - milestone_rank
+      - related_phase_id
       - milestone_description
       - milestone_name
       filter: {}
-      check: null
+      check: {}
 - table:
     schema: public
     name: moped_phases
@@ -2143,179 +2154,162 @@
     permission:
       check: {}
       columns:
-      - milestone_name
-      - milestone_description
-      - milestone_order
-      - milestone_start
-      - milestone_end
-      - milestone_length
-      - milestone_privacy
-      - days_left
-      - is_current_milestone
-      - completed
       - project_milestone_id
       - project_id
-      - project_timeline_id
-      - milestone_owner_id
+      - milestone_name
+      - milestone_description
+      - milestone_rank
+      - completion_percentage
+      - milestone_status
+      - milestone_privacy
+      - milestone_start
+      - milestone_end
+      - milestone_priority
+      - milestone_date_type
+      - milestone_related_phase_id
+      - is_current_milestone
+      - completed
+      - started_by_user_id
+      - completed_by_user_id
       - date_added
       backend_only: false
   - role: moped-editor
     permission:
       check: {}
       columns:
-      - milestone_name
-      - milestone_description
-      - milestone_order
-      - milestone_start
-      - milestone_end
-      - milestone_length
-      - milestone_privacy
-      - days_left
-      - is_current_milestone
-      - completed
       - project_milestone_id
       - project_id
-      - project_timeline_id
-      - milestone_owner_id
+      - milestone_name
+      - milestone_description
+      - milestone_rank
+      - completion_percentage
+      - milestone_status
+      - milestone_privacy
+      - milestone_start
+      - milestone_end
+      - milestone_priority
+      - milestone_date_type
+      - milestone_related_phase_id
+      - is_current_milestone
+      - completed
+      - started_by_user_id
+      - completed_by_user_id
       - date_added
       backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
       columns:
-      - completed
-      - is_current_milestone
-      - milestone_privacy
-      - milestone_end
-      - milestone_start
-      - days_left
-      - milestone_length
-      - milestone_order
-      - milestone_owner_id
-      - project_id
       - project_milestone_id
-      - project_timeline_id
-      - milestone_description
+      - project_id
       - milestone_name
+      - milestone_description
+      - milestone_rank
+      - completion_percentage
+      - milestone_status
+      - milestone_privacy
+      - milestone_start
+      - milestone_end
+      - milestone_priority
+      - milestone_date_type
+      - milestone_related_phase_id
+      - is_current_milestone
+      - completed
+      - started_by_user_id
+      - completed_by_user_id
       - date_added
       filter: {}
-      allow_aggregations: true
   - role: moped-editor
     permission:
       columns:
-      - completed
-      - is_current_milestone
-      - milestone_privacy
-      - milestone_end
-      - milestone_start
-      - days_left
-      - milestone_length
-      - milestone_order
-      - milestone_owner_id
-      - project_id
       - project_milestone_id
-      - project_timeline_id
-      - milestone_description
+      - project_id
       - milestone_name
+      - milestone_description
+      - milestone_rank
+      - completion_percentage
+      - milestone_status
+      - milestone_privacy
+      - milestone_start
+      - milestone_end
+      - milestone_priority
+      - milestone_date_type
+      - milestone_related_phase_id
+      - is_current_milestone
+      - completed
+      - started_by_user_id
+      - completed_by_user_id
       - date_added
       filter: {}
-      allow_aggregations: true
   - role: moped-viewer
     permission:
       columns:
-      - milestone_name
-      - milestone_description
-      - milestone_order
-      - milestone_start
-      - milestone_end
-      - milestone_length
-      - milestone_privacy
-      - days_left
-      - is_current_milestone
-      - completed
       - project_milestone_id
       - project_id
-      - project_timeline_id
-      - milestone_owner_id
+      - milestone_name
+      - milestone_description
+      - milestone_rank
+      - completion_percentage
+      - milestone_status
+      - milestone_privacy
+      - milestone_start
+      - milestone_end
+      - milestone_priority
+      - milestone_date_type
+      - milestone_related_phase_id
+      - is_current_milestone
+      - completed
+      - started_by_user_id
+      - completed_by_user_id
       - date_added
       filter: {}
-      allow_aggregations: true
   update_permissions:
   - role: moped-admin
     permission:
       columns:
-      - completed
-      - is_current_milestone
-      - milestone_privacy
-      - milestone_end
-      - milestone_start
-      - days_left
-      - milestone_length
-      - milestone_order
-      - milestone_owner_id
-      - project_id
       - project_milestone_id
-      - project_timeline_id
-      - milestone_description
+      - project_id
       - milestone_name
+      - milestone_description
+      - milestone_rank
+      - completion_percentage
+      - milestone_status
+      - milestone_privacy
+      - milestone_start
+      - milestone_end
+      - milestone_priority
+      - milestone_date_type
+      - milestone_related_phase_id
+      - is_current_milestone
+      - completed
+      - started_by_user_id
+      - completed_by_user_id
       - date_added
       filter: {}
-      check: null
+      check: {}
   - role: moped-editor
     permission:
       columns:
-      - completed
-      - is_current_milestone
-      - milestone_privacy
-      - milestone_end
-      - milestone_start
-      - days_left
-      - milestone_length
-      - milestone_order
-      - milestone_owner_id
-      - project_id
       - project_milestone_id
-      - project_timeline_id
-      - milestone_description
+      - project_id
       - milestone_name
+      - milestone_description
+      - milestone_rank
+      - completion_percentage
+      - milestone_status
+      - milestone_privacy
+      - milestone_start
+      - milestone_end
+      - milestone_priority
+      - milestone_date_type
+      - milestone_related_phase_id
+      - is_current_milestone
+      - completed
+      - started_by_user_id
+      - completed_by_user_id
       - date_added
       filter: {}
-      check: null
-  event_triggers:
-  - name: activity_log_moped_proj_milestones
-    definition:
-      enable_manual: false
-      insert:
-        columns: '*'
-      delete:
-        columns: '*'
-      update:
-        columns:
-        - completed
-        - is_current_milestone
-        - milestone_privacy
-        - milestone_end
-        - milestone_start
-        - days_left
-        - milestone_length
-        - milestone_order
-        - milestone_owner_id
-        - project_id
-        - project_milestone_id
-        - project_timeline_id
-        - milestone_description
-        - milestone_name
-        - date_added
-    retry_conf:
-      num_retries: 0
-      interval_sec: 10
-      timeout_sec: 60
-    webhook_from_env: MOPED_API_EVENTS_URL
-    headers:
-    - name: MOPED_API_APIKEY
-      value_from_env: MOPED_API_APIKEY
-    - value: activity_log
-      name: MOPED_API_EVENT_NAME
+      check: {}
 - table:
     schema: public
     name: moped_proj_notes
