--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -1418,54 +1418,61 @@
       check: {}
       columns:
       - feature_id
-      - project_id
       - location
+      - project_id
+      - status_id
       backend_only: false
   - role: moped-editor
     permission:
       check: {}
       columns:
       - feature_id
-      - project_id
       - location
+      - project_id
+      - status_id
       backend_only: false
   select_permissions:
   - role: moped-admin
     permission:
       columns:
       - feature_id
-      - project_id
       - location
+      - project_id
+      - status_id
       filter: {}
   - role: moped-editor
     permission:
       columns:
       - feature_id
-      - project_id
       - location
+      - project_id
+      - status_id
       filter: {}
   - role: moped-viewer
     permission:
       columns:
       - feature_id
-      - project_id
       - location
+      - project_id
+      - status_id
       filter: {}
   update_permissions:
   - role: moped-admin
     permission:
       columns:
       - feature_id
-      - project_id
       - location
+      - project_id
+      - status_id
       filter: {}
       check: null
   - role: moped-editor
     permission:
       columns:
       - feature_id
-      - project_id
       - location
+      - project_id
+      - status_id
       filter: {}
       check: null
 - table:
