--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -623,7 +623,7 @@
       - required_milestone
       - milestone_average_length
       - milestone_id
-      - milestone_rank
+      - milestone_order
       - related_phase_id
       - milestone_description
       - milestone_name
@@ -635,7 +635,7 @@
       - required_milestone
       - milestone_average_length
       - milestone_id
-      - milestone_rank
+      - milestone_order
       - related_phase_id
       - milestone_description
       - milestone_name
@@ -647,7 +647,7 @@
       - required_milestone
       - milestone_average_length
       - milestone_id
-      - milestone_rank
+      - milestone_order
       - related_phase_id
       - milestone_description
       - milestone_name
@@ -658,7 +658,7 @@
       - required_milestone
       - milestone_average_length
       - milestone_id
-      - milestone_rank
+      - milestone_order
       - related_phase_id
       - milestone_description
       - milestone_name
@@ -669,7 +669,7 @@
       - required_milestone
       - milestone_average_length
       - milestone_id
-      - milestone_rank
+      - milestone_order
       - related_phase_id
       - milestone_description
       - milestone_name
@@ -681,7 +681,7 @@
       - required_milestone
       - milestone_average_length
       - milestone_id
-      - milestone_rank
+      - milestone_order
       - related_phase_id
       - milestone_description
       - milestone_name
@@ -693,7 +693,7 @@
       - required_milestone
       - milestone_average_length
       - milestone_id
-      - milestone_rank
+      - milestone_order
       - related_phase_id
       - milestone_description
       - milestone_name
@@ -709,7 +709,7 @@
       columns:
       - phase_name
       - phase_description
-      - phase_rank
+      - phase_order
       - phase_average_length
       - required_phase
       - phase_id
@@ -720,7 +720,7 @@
       columns:
       - phase_name
       - phase_description
-      - phase_rank
+      - phase_order
       - phase_average_length
       - required_phase
       - phase_id
@@ -732,7 +732,7 @@
       - required_phase
       - phase_average_length
       - phase_id
-      - phase_rank
+      - phase_order
       - phase_description
       - phase_name
       filter: {}
@@ -743,7 +743,7 @@
       - required_phase
       - phase_average_length
       - phase_id
-      - phase_rank
+      - phase_order
       - phase_description
       - phase_name
       filter: {}
@@ -753,7 +753,7 @@
       columns:
       - phase_name
       - phase_description
-      - phase_rank
+      - phase_order
       - phase_average_length
       - required_phase
       - phase_id
@@ -766,7 +766,7 @@
       - required_phase
       - phase_average_length
       - phase_id
-      - phase_rank
+      - phase_order
       - phase_description
       - phase_name
       filter: {}
@@ -777,7 +777,7 @@
       - required_phase
       - phase_average_length
       - phase_id
-      - phase_rank
+      - phase_order
       - phase_description
       - phase_name
       filter: {}
@@ -2158,7 +2158,7 @@
       - project_id
       - milestone_name
       - milestone_description
-      - milestone_rank
+      - milestone_order
       - completion_percentage
       - milestone_status
       - milestone_privacy
@@ -2181,7 +2181,7 @@
       - project_id
       - milestone_name
       - milestone_description
-      - milestone_rank
+      - milestone_order
       - completion_percentage
       - milestone_status
       - milestone_privacy
@@ -2204,7 +2204,7 @@
       - project_id
       - milestone_name
       - milestone_description
-      - milestone_rank
+      - milestone_order
       - completion_percentage
       - milestone_status
       - milestone_privacy
@@ -2226,7 +2226,7 @@
       - project_id
       - milestone_name
       - milestone_description
-      - milestone_rank
+      - milestone_order
       - completion_percentage
       - milestone_status
       - milestone_privacy
@@ -2248,7 +2248,7 @@
       - project_id
       - milestone_name
       - milestone_description
-      - milestone_rank
+      - milestone_order
       - completion_percentage
       - milestone_status
       - milestone_privacy
@@ -2271,7 +2271,7 @@
       - project_id
       - milestone_name
       - milestone_description
-      - milestone_rank
+      - milestone_order
       - completion_percentage
       - milestone_status
       - milestone_privacy
@@ -2294,7 +2294,7 @@
       - project_id
       - milestone_name
       - milestone_description
-      - milestone_rank
+      - milestone_order
       - completion_percentage
       - milestone_status
       - milestone_privacy
@@ -2673,7 +2673,7 @@
       - phase_name
       - phase_priority
       - phase_privacy
-      - phase_rank
+      - phase_order
       - phase_start
       - phase_status
       - project_id
@@ -2696,7 +2696,7 @@
       - phase_name
       - phase_priority
       - phase_privacy
-      - phase_rank
+      - phase_order
       - phase_start
       - phase_status
       - project_id
@@ -2719,7 +2719,7 @@
       - phase_name
       - phase_priority
       - phase_privacy
-      - phase_rank
+      - phase_order
       - phase_start
       - phase_status
       - project_id
@@ -2742,7 +2742,7 @@
       - phase_name
       - phase_priority
       - phase_privacy
-      - phase_rank
+      - phase_order
       - phase_start
       - phase_status
       - project_id
@@ -2765,7 +2765,7 @@
       - phase_name
       - phase_priority
       - phase_privacy
-      - phase_rank
+      - phase_order
       - phase_start
       - phase_status
       - project_id
@@ -2789,7 +2789,7 @@
       - phase_name
       - phase_priority
       - phase_privacy
-      - phase_rank
+      - phase_order
       - phase_start
       - phase_status
       - project_id
@@ -2812,7 +2812,7 @@
       - phase_name
       - phase_priority
       - phase_privacy
-      - phase_rank
+      - phase_order
       - phase_start
       - phase_status
       - project_id
@@ -2839,7 +2839,7 @@
         - completed_by_user_id
         - completion_percentage
         - phase_priority
-        - phase_rank
+        - phase_order
         - project_id
         - project_phase_id
         - started_by_user_id
@@ -3332,7 +3332,7 @@
       - project_id
       - subphase_name
       - subphase_description
-      - subphase_rank
+      - subphase_order
       - completion_percentage
       - subphase_status
       - subphase_privacy
@@ -3362,7 +3362,7 @@
       - project_subphase_id
       - started_by_user_id
       - subphase_priority
-      - subphase_rank
+      - subphase_order
       - subphase_related_phase_id
       - subphase_date_type
       - subphase_description
@@ -3385,7 +3385,7 @@
       - project_subphase_id
       - started_by_user_id
       - subphase_priority
-      - subphase_rank
+      - subphase_order
       - subphase_related_phase_id
       - subphase_date_type
       - subphase_description
@@ -3407,7 +3407,7 @@
       - project_subphase_id
       - started_by_user_id
       - subphase_priority
-      - subphase_rank
+      - subphase_order
       - subphase_related_phase_id
       - subphase_date_type
       - subphase_description
@@ -3429,7 +3429,7 @@
       - project_subphase_id
       - started_by_user_id
       - subphase_priority
-      - subphase_rank
+      - subphase_order
       - subphase_related_phase_id
       - subphase_date_type
       - subphase_description
@@ -3452,7 +3452,7 @@
       - project_subphase_id
       - started_by_user_id
       - subphase_priority
-      - subphase_rank
+      - subphase_order
       - subphase_related_phase_id
       - subphase_date_type
       - subphase_description
@@ -3475,7 +3475,7 @@
       - project_subphase_id
       - started_by_user_id
       - subphase_priority
-      - subphase_rank
+      - subphase_order
       - subphase_related_phase_id
       - subphase_date_type
       - subphase_description
@@ -4202,7 +4202,7 @@
       - subphase_id
       - subphase_name
       - subphase_description
-      - subphase_rank
+      - subphase_order
       - subphase_average_length
       - required_subphase
       - related_phase_id
@@ -4215,7 +4215,7 @@
       - related_phase_id
       - subphase_average_length
       - subphase_id
-      - subphase_rank
+      - subphase_order
       - subphase_description
       - subphase_name
       backend_only: false
@@ -4227,7 +4227,7 @@
       - related_phase_id
       - subphase_average_length
       - subphase_id
-      - subphase_rank
+      - subphase_order
       - subphase_description
       - subphase_name
       filter: {}
@@ -4238,7 +4238,7 @@
       - related_phase_id
       - subphase_average_length
       - subphase_id
-      - subphase_rank
+      - subphase_order
       - subphase_description
       - subphase_name
       filter: {}
@@ -4249,7 +4249,7 @@
       - related_phase_id
       - subphase_average_length
       - subphase_id
-      - subphase_rank
+      - subphase_order
       - subphase_description
       - subphase_name
       filter: {}
@@ -4261,7 +4261,7 @@
       - related_phase_id
       - subphase_average_length
       - subphase_id
-      - subphase_rank
+      - subphase_order
       - subphase_description
       - subphase_name
       filter: {}
@@ -4273,7 +4273,7 @@
       - related_phase_id
       - subphase_average_length
       - subphase_id
-      - subphase_rank
+      - subphase_order
       - subphase_description
       - subphase_name
       filter: {}
