Make the trigger work within a PR

--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -11,6 +11,9 @@ on:
         default: ""
       test:
         default: "false"
+  pull_request:
+      branches:
+        - 5889-sg-heroku
 
 jobs:
   build:
