Adds on: push back

--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -4,7 +4,16 @@
 
 name: "Build & Deploy DevStage"
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      description:
+        default: ""
+      test:
+        default: "false"
+  push:
+    branches:
+      - 5889-sg-heroku
 
 jobs:
   build:
