--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -79,7 +79,8 @@ jobs:
           echo "ACTION/BRANCH_NAME: ${BRANCH_NAME}"
           echo "MOPED_PRNUM: ${MOPED_PRNUM}"
           echo "PWD: $(pwd)"
+          echo "YQ Version: $(yq)";
           source $(pwd)/.github/workflows/aws-heroku-helper.sh
           clone_hasura_repo
-          build_database
-          run_database_migration
+          # build_database
+          # run_database_migration
