--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -86,6 +86,6 @@ jobs:
           echo "YQ Version: $(yq --version)"
           source $(pwd)/.github/workflows/aws-heroku-helper.sh
           clone_hasura_repo
-          heroku login
+          initialize_heroku_netrc
           build_database
           run_database_migration
