--- a/.github/workflows/atd_moped_build_stage.yml
+++ b/.github/workflows/atd_moped_build_stage.yml
@@ -77,6 +77,7 @@ jobs:
           HASURA_CONFIGURATION_DEVSTAGE: ${{ secrets.HASURA_CONFIGURATION_DEVSTAGE }}
           ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_ADMIN_SECRET: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_ADMIN_SECRET }}
           ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_JWT_SECRET: ${{ secrets.ATD_MOPED_DEVSTAGE_HASURA_GRAPHQL_JWT_SECRET }}
+          ATD_MOPED_DEVSTAGE_HASURA_CONFIGURATION: ${{ secrets.HASURA_CONFIGURATION_DEVSTAGE }}
           MOPED_PRNUM: ${{ github.event.pull_request.number }}
           MOPED_PRBODY: ${{ github.event.pull_request.body }}
         run: |
