--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -66,6 +66,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
+    "react-error-boundary": "^3.1.3",
     "react-feather": "^2.0.8",
     "react-filepond": "^7.1.1",
     "react-helmet": "^6.1.0",
