--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.6",
+    "@apollo/react-hooks": "^4.0.0",
     "@hookform/devtools": "^2.2.1",
     "@hookform/resolvers": "^1.0.1",
     "@material-ui/core": "^4.11.0",
