--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -77,6 +77,7 @@
     "react-map-gl-draw": "^0.22.3",
     "react-map-gl-geocoder": "^2.1.6",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-quill": "^1.3.5",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^3.4.1",
