--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -50,6 +50,7 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "dompurify": "^2.2.8",
     "env-cmd": "^10.1.0",
     "filepond": "^3.6.0",
     "filepond-plugin-file-validate-size": "^2.1.1",
