--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -224,6 +224,7 @@
       - component_name
       - component_order
       - date_added
+      - status_id
       backend_only: false
   - role: moped-editor
     permission:
@@ -233,6 +234,7 @@
       - component_name
       - component_order
       - date_added
+      - status_id
       backend_only: false
   select_permissions:
   - role: moped-admin
@@ -242,6 +244,7 @@
       - component_name
       - component_order
       - date_added
+      - status_id
       filter: {}
   - role: moped-editor
     permission:
@@ -250,6 +253,7 @@
       - component_name
       - component_order
       - date_added
+      - status_id
       filter: {}
   - role: moped-viewer
     permission:
@@ -258,6 +262,7 @@
       - component_name
       - component_order
       - date_added
+      - status_id
       filter: {}
   update_permissions:
   - role: moped-admin
@@ -267,6 +272,7 @@
       - component_name
       - component_order
       - date_added
+      - status_id
       filter: {}
       check: {}
   - role: moped-editor
@@ -276,6 +282,7 @@
       - component_name
       - component_order
       - date_added
+      - status_id
       filter: {}
       check: {}
 - table:
@@ -995,6 +1002,8 @@
       - project_component_id
       - project_id
       - component_id
+      - name
+      - description
       backend_only: false
   - role: moped-editor
     permission:
@@ -1003,6 +1012,8 @@
       - project_component_id
       - project_id
       - component_id
+      - name
+      - description
       backend_only: false
   select_permissions:
   - role: moped-admin
@@ -1011,6 +1022,8 @@
       - project_component_id
       - project_id
       - component_id
+      - name
+      - description
       filter: {}
   - role: moped-editor
     permission:
@@ -1018,6 +1031,8 @@
       - project_component_id
       - project_id
       - component_id
+      - name
+      - description
       filter: {}
   - role: moped-viewer
     permission:
@@ -1025,6 +1040,8 @@
       - project_component_id
       - project_id
       - component_id
+      - name
+      - description
       filter: {}
   update_permissions:
   - role: moped-admin
@@ -1033,6 +1050,8 @@
       - project_component_id
       - project_id
       - component_id
+      - name
+      - description
       filter: {}
       check: {}
   - role: moped-editor
@@ -1041,6 +1060,8 @@
       - project_component_id
       - project_id
       - component_id
+      - name
+      - description
       filter: {}
       check: {}
 - table:
@@ -1406,6 +1427,10 @@
       - project_features_components_id
       - moped_proj_features_id
       - moped_proj_component_id
+      - name
+      - description
+      - create_date
+      - status_id
       backend_only: false
   - role: moped-editor
     permission:
@@ -1414,6 +1439,10 @@
       - project_features_components_id
       - moped_proj_features_id
       - moped_proj_component_id
+      - name
+      - description
+      - create_date
+      - status_id
       backend_only: false
   select_permissions:
   - role: moped-admin
@@ -1422,6 +1451,10 @@
       - project_features_components_id
       - moped_proj_features_id
       - moped_proj_component_id
+      - name
+      - description
+      - create_date
+      - status_id
       filter: {}
   - role: moped-editor
     permission:
@@ -1429,6 +1462,10 @@
       - project_features_components_id
       - moped_proj_features_id
       - moped_proj_component_id
+      - name
+      - description
+      - create_date
+      - status_id
       filter: {}
   - role: moped-viewer
     permission:
@@ -1436,6 +1473,10 @@
       - project_features_components_id
       - moped_proj_features_id
       - moped_proj_component_id
+      - name
+      - description
+      - create_date
+      - status_id
       filter: {}
   update_permissions:
   - role: moped-admin
@@ -1444,6 +1485,10 @@
       - project_features_components_id
       - moped_proj_features_id
       - moped_proj_component_id
+      - name
+      - description
+      - create_date
+      - status_id
       filter: {}
       check: {}
   - role: moped-editor
@@ -1452,6 +1497,10 @@
       - project_features_components_id
       - moped_proj_features_id
       - moped_proj_component_id
+      - name
+      - description
+      - create_date
+      - status_id
       filter: {}
       check: {}
 - table:
