--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -4581,6 +4581,7 @@
       - status_id
       - project_team_members
       filter: {}
+      allow_aggregations: true
   - role: moped-editor
     permission:
       columns:
@@ -4608,6 +4609,7 @@
       - status_id
       - project_team_members
       filter: {}
+      allow_aggregations: true
   - role: moped-viewer
     permission:
       columns:
@@ -4635,3 +4637,4 @@
       - status_id
       - project_team_members
       filter: {}
+      allow_aggregations: true
