--- a/moped-database/metadata/tables.yaml
+++ b/moped-database/metadata/tables.yaml
@@ -3597,6 +3597,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - milestone_id
       - project_description
       - project_description_public
       - project_id
@@ -3607,6 +3608,7 @@
       - project_priority
       - project_uuid
       - start_date
+      - status_id
       - timeline_id
       backend_only: false
   - role: moped-editor
@@ -3622,6 +3624,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - milestone_id
       - project_description
       - project_description_public
       - project_id
@@ -3632,6 +3635,7 @@
       - project_priority
       - project_uuid
       - start_date
+      - status_id
       - timeline_id
       backend_only: false
   select_permissions:
@@ -3647,6 +3651,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - milestone_id
       - project_description
       - project_description_public
       - project_id
@@ -3657,6 +3662,7 @@
       - project_priority
       - project_uuid
       - start_date
+      - status_id
       - timeline_id
       filter: {}
       allow_aggregations: true
@@ -3672,6 +3678,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - milestone_id
       - project_description
       - project_description_public
       - project_id
@@ -3682,6 +3689,7 @@
       - project_priority
       - project_uuid
       - start_date
+      - status_id
       - timeline_id
       filter: {}
       allow_aggregations: true
@@ -3697,6 +3705,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - milestone_id
       - project_description
       - project_description_public
       - project_id
@@ -3707,6 +3716,7 @@
       - project_priority
       - project_uuid
       - start_date
+      - status_id
       - timeline_id
       filter: {}
       allow_aggregations: true
@@ -3723,6 +3733,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - milestone_id
       - project_description
       - project_description_public
       - project_id
@@ -3733,9 +3744,10 @@
       - project_priority
       - project_uuid
       - start_date
+      - status_id
       - timeline_id
       filter: {}
-      check: null
+      check: {}
   - role: moped-editor
     permission:
       columns:
@@ -3748,6 +3760,7 @@
       - end_date
       - fiscal_year
       - is_retired
+      - milestone_id
       - project_description
       - project_description_public
       - project_id
@@ -3758,9 +3771,10 @@
       - project_priority
       - project_uuid
       - start_date
+      - status_id
       - timeline_id
       filter: {}
-      check: null
+      check: {}
   event_triggers:
   - name: activity_log_moped_project
     definition:
