--- a/moped-editor/package.json
+++ b/moped-editor/package.json
@@ -7,7 +7,7 @@
   "private": false,
   "scripts": {
     "start": "env-cmd -e local npm run start:local",
-    "start:local": "react-scripts start",
+    "start:local": "export HTTPS=true && react-scripts start",
     "start:staging": "env-cmd -e staging npm run start:local",
     "start:development": "env-cmd -e development npm run start:local",
     "start:production": "env-cmd -e production npm run start:local",
